--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "native-base": "^2.3.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.4",
+    "react-native-modal": "^3.0.1",
     "react-native-multi-slider": "^0.3.5",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-native-multiple-choice": "0.0.8",
+    "react-native-vector-icons": "^4.3.0",
+    "react-navigation": "^1.0.0-beta.11",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
