--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-multi-slider": "^0.3.5",
     "react-native-multiple-choice": "0.0.8",
     "react-native-vector-icons": "^4.3.0",
+    "react-native-xml2js": "^1.0.3",
     "react-navigation": "^1.0.0-beta.11",
     "underscore": "^1.8.3"
   },
