--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
   },
   "dependencies": {
     "async": "^2.5.0",
+    "buffer": "^5.0.7",
     "native-base": "^2.3.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.4",
+    "react-native-crypto": "^2.0.2",
     "react-native-modal": "^3.0.1",
     "react-native-multi-slider": "^0.3.5",
     "react-native-multiple-choice": "0.0.8",
+    "react-native-randombytes": "^2.2.0",
     "react-native-vector-icons": "^4.3.0",
-    "react-native-xml2js": "^1.0.3",
     "react-navigation": "^1.0.0-beta.11",
-    "underscore": "^1.8.3"
+    "stream": "0.0.2",
+    "underscore": "^1.8.3",
+    "util": "^0.10.3",
+    "xml-js": "^1.4.1"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
